--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cy:open": "cypress open"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "framer-motion": "^11.2.13",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
